# mini_ci

./: Cargo.toml  README.md
doc/: book.toml
doc/book/: SUMMARY.md~  constraints.md~  implementation_of_the_web_server.md~  implementation_of_the_workers.html  implementation_of_the_workers.md~  introduction.md~  performance_assessment.md~  print.html  searchindex.js
doc/src/: SUMMARY.md  architecture.md  constraints.md  future_work.md  implementation_of_the_web_server.md  implementation_of_the_workers.md  introduction.md  performance_assessment.md  security.md
docs/: 404.html  architecture.html  architecture.md~  constraints.html  future_work.html  implementation.md~  implementation_of_the_web_server.html  index.html  performance_assessment.html  print.html  searchindex.js  searchindex.json  security.html
src/server/: add_job.html  add_test_list_to_job.rs  common.rs  create_schema.sql  get_build_details.rs  list_job_queue.rs  main.rs  post_job.rs  report_test_change.rs  request_task.rs  update_task.rs
src/worker/: common.rs  main.rs  run_command.rs  run_task.rs  update_git_repo.rs
