[package]
name = "mini_ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for mini_ci
axum = "0.8.0-rc.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [ "compression-full", "trace" ] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"]}
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
html-escape = { version = "0.2.13" }

# for mini_worker
reqwest = { version = "0.11.23", features = [ "blocking" ] }
temp-dir = "0.1.12"
libc = "0.2.151"
signal-hook = "0.3.17"
nix = { version = "0.28.0", features = ["signal"] }
kill_tree = "0.2.4"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold"]

[profile.release]
strip = "symbols"

[[bin]]
name = "mini_ci"
path = "src/server/main.rs"

[[bin]]
name = "mini_worker"
path = "src/worker/main.rs"

